If you don't have the following line, all the <h3> stop aligning the to top because the child does not share the grid with the parent

--- a/style.css
+++ b/style.css
@@ -139,7 +139,8 @@ aside {
   display: grid;
 
   /* This one, together with grid-row: span 3, force current grid to align with the 3 rows defined parent's grid-auto-rows */
-  /*grid-template-rows: subgrid;*/
+  /* You can tell if you don't have the following line, all the <h3> stop aligning the to top because the child does not share the grid with the parent */
+  grid-template-rows: subgrid;
 
   gap: 1rem;
   background: var(--clr-primary-700);
@@ -158,8 +159,8 @@ aside {
 .product > img {
   width: 100%;
 
-  height: 100%;
-  /*height: 120px;*/
+  /*height: 100%;*/
+  height: 120px;
 
   object-fit: cover;
 }
